--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <!-- Hero Section  -->
   <section id="hero">
-    <video src="./img/Background-video.mp4" muted loop autoplay></video>
+    <video src="./img/Background-vid.mp4" muted loop autoplay></video>
     <div class="hero container">
       <div>
         <h1>Hello, <span></span></h1>
