index.html update

--- a/index.html
+++ b/index.html
@@ -336,16 +336,16 @@
       <h2>Web Developer</h2>
       <div class="social-icon">
         <div class="social-item">
-          <a href="https://twitter.com/robin_b3"><i class="fa-brands fa-twitter"></i></a>
+          <a href="https://twitter.com/robin_b3"target="_blank"><i class="fa-brands fa-twitter"></i></a>
         </div>
         <div class="social-item">
-          <a href="https://www.instagram.com/_l_.robin._l_/"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.instagram.com/_l_.robin._l_/"target="_blank"><i class="fa-brands fa-instagram"></i></a>
         </div>
         <div class="social-item">
-          <a href="https://github.com/robins-b"><i class="fa-brands fa-github"></i></a>
+          <a href="https://github.com/robins-b"target="_blank"><i class="fa-brands fa-github"></i></a>
         </div>
         <div class="social-item">
-          <a href="https://www.linkedin.com/in/surandar-robins-7a8606232/"><i class="fa-brands fa-linkedin-in"></i></a>
+          <a href="https://www.linkedin.com/in/surandar-robins-7a8606232/"target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
         </div>
       </div>
       <p>Copyright © 2022 Robin. All rights reserved</p>
